# Inspectarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REBUILD.md  SECURITYENGINEER.md  SECURITY_REVIEW.md  TODO.md  UIDESIGN.md  pyproject.toml  requirements.txt
.cursor/rules/: git-workflow.mdc
.github/workflows/: security.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  STACK.md  (+3 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  DECISIONS.md  DEPLOYMENT.md  KNOWN_ISSUES.md  PLEX_API_LIBRARY_REMOVAL.md  SONARR.md  TAUTULLI_API.md  UI_IMPROVEMENTS.md
tests/: test_activity_cache.py  test_aggregate.py  test_basic_auth.py  test_csrf.py  test_dashboard_config.py  test_history_cache.py  test_history_health.py  test_history_range_persist.py  test_history_resolution.py  test_history_scope.py  test_inventory_cache.py  test_library_unwatched_build_status.py  test_library_unwatched_inventory_loop.py  test_library_unwatched_normalize.py  test_library_unwatched_sonarr_prune.py  test_library_unwatched_stop.py  test_live_streams_tooltip.py  test_overseerr_request_map.py  test_plex_hub_match.py  test_plex_settings.py  test_report_export.py  test_sonarr_library_disk_filter.py  test_sonarr_library_row_state.py  test_stale_4k_movies_upstream.py  test_stale_library_cache_behavior.py  test_stale_library_export.py  test_stale_library_service.py  test_stale_library_upstream.py  test_stale_movies_upstream.py  test_tautulli_history_clamp.py  test_tautulli_library_client.py  test_url_safety.py
trash/: README.md  UIDESIGN.md
(+97 files in other folders)
