[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tautulli-inspector"
version = "0.1.0"
description = "Insecpectarr — single-pane dashboard for multiple Tautulli servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pydantic-settings>=2.2,<3",
  "python-multipart>=0.0.9,<1",
  "slowapi>=0.1.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
tautulli-inspector = "tautulli_inspector.main:run"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
